--- a/tablet-style.css
+++ b/tablet-style.css
@@ -55,5 +55,6 @@
     
     #main-content {
         width: 75vw;
+        overflow-x: hidden;
     }
 }
